---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-05-28
  Changes:
    - Fixed the missing descriptions on the technology entries
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-05-17
  Changes:
    - Removed some of the value restrictions on settings
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-05-16